@@ -1,5 +1,7 @@
         - Add support for text-rendering of the Screenplay-XML <inlinedesc>
         tag, so it will now render as '[' ... ']' inside the paragraphs.
+        - Add the tag-release.pl file to tag a release to the Subversion
+        repository.
 
 0.0200      Thu Jan 21 19:10:28 IST 2010
         - Fixed some validation errors in the XSLT stylesheet that caused
